Trying to solve 100vh on mobile devices problem [9]

--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,9 @@ main {
   
   position: fixed;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
+  width: 100%;
+  height: 100vh;
   z-index: 999;
 }
 
